Bug 133453 - FILEOPEN: DOC: incorrect spacing in subscript
Summary: FILEOPEN: DOC: incorrect spacing in subscript
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.1.0 target:7.0.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-05-27 16:45 UTC by Xisco Faulí
Modified: 2020-06-02 13:46 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison MSO 2010 and LibreOffice 7.0 master (69.89 KB, image/png)
2020-05-27 16:45 UTC, Xisco Faulí
Details
A table in table with a minimum row height.doc (24.50 KB, application/msword)
2020-05-27 18:04 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-05-27 16:45:05 UTC
Created attachment 161347 [details]
Comparison MSO 2010 and LibreOffice 7.0 master

Steps to reproduce:
1. Open attachment 79613 [details] from bug 64823

-> Subscript has incorrect spacing. See comparison screenshot

Reproduced in

Version: 7.0.0.0.alpha1+
Build ID: 82894d85147840f1f587e9530b12f0058f2ef2c3
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded


[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2020-05-27 16:46:19 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=227100ff4e5560c09c5a822052fc5ada541b8cc5

author	Justin Luth <justin.luth@collabora.com>	2019-11-07 15:22:08 +0300
committer	Miklos Vajna <vmiklos@collabora.com>	2019-11-18 09:25:35 +0100
commit 227100ff4e5560c09c5a822052fc5ada541b8cc5 (patch)
tree b6bb97d5088ef318978373a17d0714e85742a638
parent bc9b046fbd1d68016ae6c53c990fce97b57eb663 (diff)
related tdf#120412 ww8import: allow > 100% escapement, fix calculation

Bisected with: bibisect-linux64-6.5

Adding Cc: to Justin Luth
Comment 2 Justin L 2020-05-27 18:04:11 UTC Comment hidden (off-topic, wrong_bug)
Comment 3 Justin L 2020-05-27 19:24:41 UTC
If I round-trip this document with MSO 2003, then it doesn't have this problem. If I export as docx, there is nothing indicating a fontsize change.

However, an SPRM first sets the fontsize to 6. The fontsize is set twice in a row - as seen in msodumper:

<prl type="Prl" offset="3541" index="1">
<sprm value="0x4a43" ispmd="0x43" fSpec="0x1" sgc="character" spra="2" name="sprmCHps" operandSize="2" operand="0xc"/>
</prl>
<prl type="Prl" offset="3545" index="2">
<sprm value="0x4a43" ispmd="0x43" fSpec="0x1" sgc="character" spra="2" name="sprmCHps" operandSize="2" operand="0x18"/>
</prl>

So it looks like I have to design some kind of delayed response mechanism after all. Why oh why in the 20+ years of doc support did no one build that?
Comment 4 Justin L 2020-05-28 08:15:47 UTC
proposed fix at https://gerrit.libreoffice.org/c/core/+/95013
Comment 5 Commit Notification 2020-05-29 16:07:02 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4efeee09bce9835f587ea7d1577471768bf73e2d

tdf#133453 doc import: HasSprm can return last one

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2020-05-30 06:42:44 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/59c2a8f3ceacabb3132ba1c02ab5e76e510572e9

tdf#133453 doc import: HasSprm can return last one

It will be available in 7.0.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2020-06-01 13:24:03 UTC
Verified in

Version: 7.0.0.0.beta1+
Build ID: 2506d8221dd940dfd93d3d7c183430ba6ba3089d
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Justin, thanks for fixing this issue!!
Comment 8 Justin L 2020-06-02 13:46:48 UTC
P.S. This also fixes the same subscript problem in the very odd ww8export.cxx fdo66304-1.odt.